--- a/index.html
+++ b/index.html
@@ -33,28 +33,31 @@
     </style>
   </head>
   <body>
-    <div class="card">
-      <img class="qr-code" src="/images/image-qr-code.png" alt="QR code" />
+    <main>
+      <div class="card">
+        <img class="qr-code" src="/images/image-qr-code.png" alt="QR code" />
 
-      <div class="card-textbox">
-        <h2 class="card-title">
-          Improve your front-end skills by building projects
-        </h2>
-        <p class="card-paragraph">
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+        <div class="card-textbox">
+          <h1 class="card-title">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="card-paragraph">
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a href="https://www.scottmartinwebdevelopment.com" target="_blank"
-        >Scott Martin</a
-      >.
-    </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://www.scottmartinwebdevelopment.com" target="_blank"
+          >Scott Martin</a
+        >.
+      </div>
+    </footer>
   </body>
 </html>
